# ThyraOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clang.cmake
scripts/: build  run
src/bootloader/: .clangd  CMakeLists.txt  EntryPoint.cpp  Graphics.cpp  Graphics.h
src/bootloader/includes/: cpp_includes.h  efi_includes.h
src/libcore/: Math.h  Memory.h
